<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/back_toolbar" />

    <EditText
        android:id="@+id/password"
        style="@style/edit_text_style"
        android:layout_below="@id/code_layout"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/enter_new_password"
        style="@style/edit_text_style"
        android:layout_below="@id/code_layout"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/enter_password_second"
        style="@style/edit_text_style"
        android:layout_below="@id/code_layout"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/enter_password_second"
        android:inputType="textPassword" />

    <Button
        android:enabled="false"
        android:id="@+id/save"
        style="@style/button_style"
        android:text="@string/save" />
</LinearLayout>