<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/complete_people_information" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/enter_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/layout_spacing_color" />

    </RelativeLayout>

    <com.flym.yh.ui.view.CustomMineItemView
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:bg="@color/white"
        app:isNotVisity="false"
        app:rightText=""
        app:titleText="@string/department" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/hospital"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/enter_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/enter_hospital"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/layout_spacing_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/position"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:drawableRight="@drawable/sy_wdfw_dhzx_xiala"
            android:id="@+id/enter_position"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/enter_position"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/layout_spacing_color" />

    </RelativeLayout>

    <com.flym.yh.ui.view.CustomMineItemView
        android:id="@+id/in_the_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:bg="@color/white"
        app:isNotVisity="false"
        app:titleText="@string/in_the_area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_address"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/enter_detail_address"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_edit_stoke"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/next_text"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="@color/red_ff"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>